! fixed teeny-tiny issue: resize-handle border was visible while resizing -> not anymore

--- a/autorensystem/js/simulator/view/timeline.css
+++ b/autorensystem/js/simulator/view/timeline.css
@@ -242,6 +242,11 @@ table#timelineTable tr.timeline-step > td.timeline-cell-occupied div.occupied-re
      border-bottom: 1px solid;
 }
 
+table#timelineTable tr.timeline-step > td.timeline-cell:not(.timeline-cell-occupied) div.occupied-resize-handle
+{
+    display: none;
+    border: hidden;
+}
 
 div.tooltip div.tooltip-inner
 {
